<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:src="@drawable/logospex" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.035"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="10pt"
        android:text="@string/login" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".005" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.23">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.7">

            <Button
                android:id="@+id/bankidbutton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/textBoxBackground"
                android:text="@string/bankid"
                android:layout_weight=".2666666667"
                android:textSize="12pt" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1" />

            <Button
                android:id="@+id/facebookbutton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2666666667"
                android:background="@color/facebookBlue"
                android:text="@string/facebook"
                android:textColor="#FFFFFF"
                android:textSize="12pt" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1" />

            <Button
                android:id="@+id/googlebutton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/google"
                android:layout_weight=".2666666667"
                android:text="@string/google"
                android:textSize="12pt" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:gravity="bottom"
        android:textSize="10pt"
        android:text="@string/nonMember" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.08">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:layout_weight="0.7"
            android:text="@string/registreraKonto"
            android:textSize="9pt" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15" />

    </LinearLayout>


</LinearLayout>







<!--
    <ImageView
        android:id="@+id/logo"
        android:layout_width="312dp"
        android:layout_height="305dp"

        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129"
        tools:srcCompat="@drawable/logospex" />

    <Button
        android:id="@+id/logon"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="60dp"
        android:radius="8dp"
        android:shape="rectangle"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/register"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logon" />

    <ImageView
        android:id="@+id/slobban_white"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/register"
        android:src="@drawable/slobban_white"/>
-->