<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_weight=".05"
        android:gravity="center"
        android:textSize="10pt"
        android:textColor="@color/textBoxBackground"
        android:text="@string/registreraKonto" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="Suspicious0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".7"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".16"
                        android:background="@drawable/infill_border"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/firstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/FirstName" />

                        <EditText
                            android:id="@+id/editFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:hint="@string/fill" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".04" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".16"
                        android:background="@drawable/infill_border"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/LastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/LastName" />

                        <EditText
                            android:id="@+id/editLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:hint="@string/fill" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".04" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".16"
                        android:background="@drawable/infill_border"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/adress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/adress" />

                        <EditText
                            android:id="@+id/editAdress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:hint="@string/fill" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".04" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".16"
                        android:background="@drawable/infill_border"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/phoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phoneNumber" />

                        <EditText
                            android:id="@+id/editPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="phone"
                            android:hint="@string/fill" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".04" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".16"
                        android:background="@drawable/infill_border"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="5pt"
                            android:text="@string/email" />

                        <EditText
                            android:id="@+id/editEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textEmailAddress"
                            android:hint="@string/fill" />
                    </LinearLayout>


                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="12dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.45"
                        android:background="@drawable/infill_border"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="6pt"
                            android:text="@string/username" />

                        <EditText
                            android:id="@+id/editUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:hint="@string/fill" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.45"
                        android:background="@drawable/infill_border"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/password" />

                        <EditText
                            android:id="@+id/editPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:hint="@string/fill" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".1" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".09"
        app:srcCompat="@android:drawable/checkbox_on_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:textAlignment="center"
        android:textSize="8pt"
        android:gravity="top"
        android:textColor="#FFFFFF"
        android:text="@string/create" />
</LinearLayout>