<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            app:srcCompat="@android:drawable/sym_def_app_icon" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:src="@mipmap/rune_holta" />

    <TextView
        android:id="@+id/profileFullName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:textAlignment="center"
        android:textSize="8pt"
        android:textColor="#F0F0F0"
        android:gravity="bottom"
        android:text="@string/sample" />

    <TextView
        android:id="@+id/profileUsername"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:textColor="#F0F0F0"
        android:gravity="center"
        android:textSize="10pt"
        android:layout_weight=".07"
        android:text="@string/sample" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"

        />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="0dp"
        android:textColor="#F0F0F0"
        android:layout_weight=".03"
        android:text="Mitt omdöme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".05" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".18"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".18"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".18"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".18"
            app:srcCompat="@android:drawable/btn_star_big_off" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".18"
            app:srcCompat="@android:drawable/btn_star_big_off" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".05" />

    </LinearLayout>

    <TextView
        android:id="@+id/profileStarCount"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textColor="#F0F0F0"
        android:layout_height="0dp"
        android:layout_weight=".04"
        android:text="@string/sample" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_weight=".5"
            android:text="@string/currentTasks"
            android:gravity="center"
            android:background="#DDDDDD"
            android:paddingBottom="2dp"/>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:background="#ADADAD"
            android:textSize="10pt"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_weight=".5"
            android:paddingBottom="2dp"
            android:text="@string/completedTasks" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ProfileTaskBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>